# BARS

./: .gitignore  .gitmodules  README.md
InverseKinematics/: BodyToFootIK.cpp  BodyToFootIk.hpp
NeuralNetwork/: README.md  config.py  gait_agent.py  gait_environment.py  gait_learning_demo.py  main.py  training.py
Perception/: main.py
ROS/: .gitignore  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  README.md  dev.sh  docker-compose.yml  test_ros2.py
ROS/examples/: README.md  arduino_ros2_bridge.ino  control_demo.py
ROS/src/bars_bringup/: CMakeLists.txt  package.xml
ROS/src/bars_bringup/launch/: bars.launch.py
ROS/src/bars_control/: CMakeLists.txt  package.xml
ROS/src/bars_control/bars_control/: __init__.py
ROS/src/bars_control/config/: servo_config.yaml
ROS/src/bars_control/launch/: control.launch.py
ROS/src/bars_control/src/: arduino_bridge_node.py  servo_controller_node.py
ROS/src/bars_msgs/: CMakeLists.txt  package.xml
ROS/src/bars_msgs/action/: WalkToGoal.action
ROS/src/bars_msgs/msg/: JointAngles.msg  RobotState.msg  ServoCommand.msg  ServoState.msg
ROS/src/bars_msgs/srv/: GetRobotStatus.srv  SetRobotState.srv
ROS/src/bars_simulation/: CMakeLists.txt  package.xml
ROS/src/bars_simulation/bars_simulation/: __init__.py
ROS/src/bars_simulation/src/: mujoco_bridge_node.py
Simulation/: CenterOfMass.py  GaitGenerator.py  InteractiveGaitTuner.py  MUJOCO_LOG.TXT  README.md  README_GaitSystem.md  ReinforcementModel.py  Utils.py  bars.xml  bars_enhanced.xml  default_positions.json  demo_gait_system.py  main.cpp  main.py  policy.json  positions.json  rewards.json  test_gait.json  text_gait_interface.py  validate_gait_system.py
Simulation/models/: LeftCalf.stl  LeftFoot.stl  LeftRollHip.stl  LeftThigh.stl  LeftYawHip.stl  RightCalf.stl  RightRollHip.stl  RightThigh.stl  RightYawHip.stl
Simulation/models/LeftRollHip/: LeftRollHip.mtl
Simulation/models/LeftYawHip/: LeftYawHip.mtl
Simulation/models/Pelvis/: Pelvis.mtl
Simulation/models/RightCalf/: RightCalf.mtl
Simulation/models/RightFoot/: RightFoot.mtl
arduino-code/: platformio.ini
arduino-code/src/: main.cpp
human-interaction/: test-primpt.txt
