<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematyp="xml"?>
<package format="3">
  <name>bars_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and system integration for BARS robot</description>
  <maintainer email="dev@bars-robot.com">BARS Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bars_msgs</exec_depend>
  <exec_depend>bars_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>